--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,9 +1,8 @@
 $font-stack: "Helvetica Neue", arial, sans-serif;
-$primary-color: #222;
-$secondary-color: #EEE;
-$primary-background: #FFFFFF;
-$secondary-background: #515151;
-$accent-background: #1C5AFF;
+$primary-color: #000;
+$secondary-color: #FFF;
+$primary-background: #FFF;
+$accent-background: #4D91BF;
 $form-background: #F7F7F7;
 $input-background: #E0E0E0;
 $error-background: #ffbfbf;
@@ -11,7 +10,7 @@ $success-accent: #dff0d8;
 $error-accent: #C30000;
 $success-accent-border: #2ecc71;
 $error-accent-border: #900;
-$input-border: #d7d7d7;
+$input-border: #4D91BF;
 $reset-space: 0;
 $half-size: 50%;
 $full-size: 100%;
